# market.io.backend

./: .env.template  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: .env.template  alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: 2024_07_06_1204-939f19ec8ce6_create_products_table.py  2024_07_06_1220-746211caafc1_create_users_table.py  2024_07_06_1233-1a6bca8b3d6f_create_posts_table.py  2024_07_06_1323-3801f4d1cfa1_create_profile_table.py  2024_07_08_1210-b4fc27e8971e_create_orders_table.py  2024_07_08_1252-52549af707ea_create_order_product_association_table.py  2024_07_08_1822-b71eb35ae930_add_count_column_to_order_product_.py  2024_07_26_1849-947085d8a9ed_create_table.py  2025_02_09_1709-0e413c487c6e_create_user_table.py  2025_02_10_0834-3be92f12e673_create_access_token_table.py  2025_02_11_1315-b7d6a9bd7b1b_reset_db.py  2025_02_21_1743-de8b0b72592f_alembic_init.py  2025_04_19_1721-f103673e8ebe_edit_category.py  2025_05_03_1534-0bc51103cc2a_edit_table.py
src/api/: __init__.py
src/api/api_v1/: __init__.py
src/api/api_v1/auth/: __init__.py  auth.py  fastapi_users_router.py
src/api/api_v1/categories/: __init__.py  category.py  crud.py
src/api/api_v1/products/: __init__.py  crud.py  product.py  views.py
src/api/api_v1/users/: __init__.py  crud.py  schemas.py  user.py  views.py
src/api/api_v2/: __init__.py
src/api/api_v2/auth/: __init__.py  auth.py
src/api/common/: __init__.py  auth_router_factory.py  current_user_factory.py
src/api/dependencies/authentication/: __init__.py  access_tokens.py  auth_strategy_factory.py  backend.py  fastapi_users_router.py  (+4 more)
src/api_v1/products/: dependencies.py  views.py
src/auth/: utils_jwt.py
src/certs/: README.md
src/core/: __init__.py  config.py  exception_handler.py
src/core/authentication/: user_manager.py
src/core/helpers/: __init__.py  db_helper.py  reset_database_helper.py
src/core/logger/: __init__.py.py  logger.py
src/core/models/: __init__.py  access_token.py  base.py  category.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
src/core/schemas/: __init__.py  category.py  product.py  profile.py  user.py
src/users/: crud.py  schemas.py  views.py
(+9 files in other folders)
